<package>
  <name>hero_description</name>
  <version>1.0.0</version>
  <description>This package contains the description (kinematic,
  etc.) of the AMIGO robot.</description>
  <maintainer email="j.geijsberts@student.tue.nl">Josja Geijsberts</maintainer>
  <maintainer email="p.v.dooren@student.tue.nl">Peter van Dooren</maintainer>

  <license>BSD</license>

  <author>Sjoerd van den Dries</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>
</package>
